{
    "name": "GameInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "1b328ca6-8a78-4b22-8c4c-bf533ee752f8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "32de1a38-3ce3-46d2-9ebb-ce8cdaf7358f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2abb334b-3156-4018-9b1a-3e0d9977c29c",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16042294-3049-4d7e-9d01-27aeed42b433",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}